--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
         </div>
 
+        <div class="rights">© 2020 Francesco Valeriano. All rights reserved.</div>
+
         <!-- Area Errore -->
         <div id="error" class="main-area">
             
